# orion-butler

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  drizzle.config.ts  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  project-context.md  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/: mcp_config.json  settings.json  settings.json.bak  temp-read-files.sh
.ralph/: config.yaml  paths.yaml
.superdesign/: design-system.md
design-mockups/: 02-orion-sign-in.html  03-orion-sign-up.html  05-areas-setup-orion.html  08-orion-project-portfolio.html  09-orion-project-detail-q4-strategic-expansion.html  13-orion-billing-plans.html  16-orion-archive.html  20-orion-notifications-center.html  22-orion-dialogue-archive.html  23-orion-chat-project-discussion.html  26-orion-scheduling-interaction.html  27-orion-email-composer.html
design-system/: README.md  index.ts  tailwind.config.ts
docker/: init-schema.sql
docs/: ARCHITECTURE.md  CHAT-CANVAS-INTERACTION-SPEC.md  Cont.-claude-ARCHITECTURE.md  DEVELOPMENT.md  MULTI-SESSION-ARCHITECTURE.md  PRD-orion-personal-butler.md  QUICKSTART.md  README.md  TECH-SPEC-orion-personal-butler.md  TLDR.md  VALIDATION-REPORT-2026-01-15.md  ci-secrets-checklist.md  ci.md  claude-agent-sdk-reference.md  index 2.md  index.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: sdk-runner.mjs
src-tauri/src/: lib.rs
src-tauri/src/commands/: conversation.rs  db.rs  mod.rs  para.rs  session.rs
src-tauri/src/db/: init.sql  mod.rs
(+978 files in other folders)
