[package]
name = "orion-butler"
version = "0.1.0"
description = "Your personal AI butler"
authors = ["Orion Team"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "orion_butler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
chrono = "0.4"
tokio = { version = "1", features = ["time", "process", "io-util", "sync"] }
uuid = { version = "1.0", features = ["v4"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
dotenvy = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
